packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/commands/bad/allow_ipv6net_wikipedia8_prefix2.cbor
¢factioneallowftarget¡hipv6_netr2001:db8:a::123/64